# hackathon-2025-03-02

./: .gitignore  Makefile  README.md  app.py  cli.py  fields.txt  ideas.txt  main.py  pyproject.toml
retreival/: pyproject.toml
twilio_openai_demo/: twilio-instructions.md
voice/: Makefile  main.py  pyproject.toml  requirements.txt  twilio-instructions.md
voice_server/: pyproject.toml
