[project]
name = "hackathon-2025-03-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.11",
    "ngrok>=1.4.0",
    "python-dotenv>=1.0.1",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
